# Biogas

./: CMakeLists.txt  README.md  biogas_output_reader_wrapper.cpp  biogas_spec_vali_wrapper.cpp
LabView/: BioGas.vi  Biogas_Control_Panel.lvlps  Biogas_Control_Panel.lvproj  UGStudio.lvlps  UGStudio.lvproj  UG_Studio.lvlps
LabView/SubVIs/: command_line_output.vi  disable_enable_buttons.vi  display_plot.vi  impressum.vi  init_panel.vi  init_plotter.vi  load_specification_file.vi  load_validation_file.vi  read_csv.vi  read_output_file.vi  run_plot_graph.vi  run_simulation.vi  run_simulation_backup.vi  run_simulation_or_interrupt.vi  save_spec_file.vi  tree_control_plot.vi  validate_specs.vi
example/: Test.lua  Test_vali.lua
example/Sample_Output/: dbg_phContribution.txt  outputFiles.lua
output_reader/: biogas_output_reader.cpp  biogas_output_reader.h
spec_vali_reader/: biogas_spec_vali_reader.cpp  biogas_spec_vali_reader.h  table_entry.h
